CHANGES
-------
This file lists changes made to the IGTF Trust Anchor distribution. Please 
refer to the README.txt file for additional information on installing the 
Distribution and to be informed about important information on distribuion 
lay-out.

Changes from 1.56 to 1.57
-------------------------
(28 April 2014)

* Removed discontinued NCSA Two Factor CA following migration
  to NCSA Two Factor CA 2013 (US)

Changes from 1.55 to 1.56
-------------------------
(31 March 2014)

* Removed discontinued SWITCHslcs2011 and associated Root (CH)
* Removed discontinued APAC CA (AU)
* Removed discontinued DoEGrids CA and ESnet root (US)
* Add reference to CA website for AustrianGrid CA (AT)
* Add new subordinates for DigiCert: 1cdf1cd9/DigiCertGridCA-1G2-Classic
  and 5d9ea26d/DigiCertGridTrustCAG2-Classic (US)
* Add meta-package for the IOTA-accredited CAs. Please note that there
  are no IOTA accredited CAs as this point in time. For specifications see
  https://www.eugridpma.org/guidelines/IOTA/
* Debian packaging dependencies in meta-packages now correctly use all-
  lower-case package names throughout

Changes from 1.54 to 1.55
-------------------------
(25 November 2013)
  THIS RELEASE IS THE LAST ONE ALSO TO BE DISTRIBUTED IN SINGLE HASH FORMAT

* New root certificate with extended life time for NorduGrid CA 1f0e8352 (DK)
* Updated contact metadata for all RENATER Grid-FR related CAs (FR)
* Updated CRL URL and metadata for IHEP 2013 CA 39d30eba (CN)
* New root certificates for NCSA CA re-key: MyProxy CA 2013 c36f6349/7aa2b7bd 
  and Two Factor CA 2013 ca157cee/48c8f10a (US)
* New root certificate for EGI catch-all CA "SEEGRID-CA-2013" 772dbd1c (GR)
* Removed AIST Grid CA (JP)
* Discontinued IUCC CA (6fee79b0) following migration to TCS (IL)
* Suspended JUnet-CA (b3222f9e) (JO)
* Removed expired unaccredited CAs (misc)
* Added unaccredited worthless NL e-Infra Zero tutorial CA 338a3561 (NL)

Changes from 1.53 to 1.54
-------------------------
(24 June 2013)
