@@ -1,12 +1,12 @@
 #
-# @(#)$Id: ba2f39ca.info,v 1.2 2005/10/18 20:26:00 pmacvsdg Exp $
+# @(#)$Id: ba2f39ca.info,v 1.3 2006/07/27 01:49:02 pmacvsyt Exp $
 # Information for CA IHEP
 #   obtained from ba2f39ca in APGrid/
 alias = IHEP
 ca_url = https://gridca.ihep.ac.cn/cacert/cacert.pem
 crl_url = http://gridca.ihep.ac.cn/cacrl.pem
 email = gridca@ihep.ac.cn
-status = accredited:classic
+status = discontinued
 url = https://gridca.ihep.ac.cn/
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
